<resources>
    <string name="app_name">Заметки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_note">Добавить</string>
    <string name="enter_note_title">Enter note title</string>
    <string name="enter_note_text">Enter note text</string>
    <string name="note_text">Note text</string>
    <string name="start_label">Что использовать?</string>
    <string name="room">Room</string>
    <string name="firebase">Firebase</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
</resources>