<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.ui.screens.start.StartFragment">

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/start_label"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button

        android:id="@+id/btn_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLabel"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/room"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnFirebase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_room"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/firebase"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnFirebase"
        android:layout_margin="@dimen/app_margin"
        android:hint="@string/e_mail"
        android:inputType="textWebEmailAddress"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_margin="@dimen/app_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:visibility="invisible" />

</RelativeLayout>